--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,70 +1,48 @@
-absl-py==1.0.0
-anyio==3.5.0
-asgiref==3.5.0
-astunparse==1.6.3
-cachetools==5.0.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.2
-colorama==0.4.4
-cycler==0.11.0
-fastapi==0.75.1
-fer==22.4.0
-flatbuffers==2.0
-fonttools==4.32.0
-gast==0.5.3
-google-auth==2.6.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.44.0
-h11==0.13.0
-h5py==3.6.0
-httptools==0.4.0
-idna==3.3
-importlib-metadata==4.11.3
-keras==2.8.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.2
-libclang==13.0.0
-Markdown==3.3.6
-matplotlib==3.5.1
-mtcnn==0.1.1
-numpy==1.22.3
-oauthlib==3.2.0
-opencv-contrib-python==4.5.5.64
-opencv-python==4.5.5.64
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.4.2
-Pillow==9.1.0
-protobuf==3.20.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==1.9.0
-pyparsing==3.0.8
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytz==2022.1
-PyYAML==6.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-six==1.16.0
-sniffio==1.2.0
-starlette==0.17.1
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
-tensorflow-io-gcs-filesystem==0.24.0
-termcolor==1.1.0
-tf-estimator-nightly==2.8.0.dev2021122109
-tqdm==4.64.0
-typing-extensions==4.1.1
-urllib3==1.26.9
-uvicorn==0.17.6
-watchgod==0.8.2
-websockets==10.2
-Werkzeug==2.1.1
-wrapt==1.14.0
-zipp==3.8.0
+annotated-types==0.6.0
+anyio==3.7.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+exceptiongroup==1.2.0
+fastapi==0.105.0
+filelock==3.13.1
+fsspec==2023.12.2
+h11==0.14.0
+httptools==0.6.1
+idna==3.6
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.2
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+opencv-python==4.8.1.78
+Pillow==10.1.0
+pydantic==2.5.3
+pydantic_core==2.14.6
+python-dotenv==1.0.0
+PyYAML==6.0.1
+requests==2.31.0
+sniffio==1.3.0
+starlette==0.27.0
+sympy==1.12
+torch==2.1.2
+torchvision==0.16.2
+triton==2.1.0
+typing_extensions==4.9.0
+urllib3==2.1.0
+uvicorn==0.25.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
